# webigeo

./: .gitignore  CMakeLists.txt  CMakePresets.json
docs/: Setup.md
example/gpx_tracks/: Madlein.gpx
example/gpx_tracks_madlein_lawine/: Area_of_Influence_Madlein_Lawine.gpx  Madlein_Lawine_Starting_Area.gpx
gl_engine/: Texture.cpp  Texture.h
scripts/: fetchDawnPort.py  installDawn.py  installSDL.py  install_dawn.py  serve_wasm.py  setup_utils.py
unittests/gl_engine/: texture.cpp
unittests/webgpu_engine/: CMakeLists.txt  test_ShaderPreprocessor.cpp
webgpu/: CMakeLists.txt
webgpu/util/: ShaderPreprocessor.cpp  ShaderPreprocessor.h
webgpu_app/: CMakeLists.txt  GuiManager.cpp  RenderingContext.cpp  TerrainRenderer.cpp
webgpu_engine/: Buffer.cpp  CMakeLists.txt  ParticleRenderer.cpp  ParticleRenderer.h  PipelineManager.cpp  PipelineManager.h  PipelineSettings.cpp  PipelineSettings.h  ShaderModuleManager.cpp  ShaderModuleManager.h  Window.cpp  Window.h
webgpu_engine/compute/: NodeRenderer.cpp
webgpu_engine/compute/nodes/: ComputeAvalancheAnimationNode.cpp  ComputeAvalancheAnimationNode.h  ComputeAvalancheTrajectoriesNode.cpp  Node.h  NodeGraph.cpp  NodeGraph.h
webgpu_engine/wgsl_shaders/: render_particles.wgsl  render_particles_alpha.wgsl  render_particles_occupancy.wgsl
webgpu_engine/wgsl_shaders/compute/: avalanche_animation_compute.wgsl  avalanche_particle_SFLM.wgsl  avalanche_particle_compact.wgsl  avalanche_particle_sph_density.wgsl  avalanche_particle_sph_force.wgsl  avalanche_particle_sph_prepare.wgsl  avalanche_particle_step.wgsl
webgpu_engine/wgsl_shaders/util/: sph_kernels.wgsl
webigeo_eval/: Settings.cpp  Settings.h  WebigeoApp.cpp
